exports[`test should render a badge component in the order, icon and text with medium size 1`] = `
<span
  className="badge medium default">
  <img
    alt="Test icon" />
  <span
    className="text">
    Test value
  </span>
</span>
`;

exports[`test should render a badge component in the order, text and icon with info intent 1`] = `
<span
  className="badge small info">
  <span
    className="text">
    Test value
  </span>
  <img
    alt="Test icon" />
</span>
`;

exports[`test should render a badge component with icon and medium size 1`] = `
<span
  className="badge medium default">
  <img
    alt="Test icon" />
</span>
`;

exports[`test should render a badge component with icon and warning intent 1`] = `
<span
  className="badge small warning">
  <img
    alt="Test icon" />
</span>
`;

exports[`test should render a badge component with text and large size 1`] = `
<span
  className="badge large default">
  <span
    className="text">
    Large
  </span>
</span>
`;

exports[`test should render a badge component with text and secondary intent 1`] = `
<span
  className="badge small secondary">
  <span
    className="text">
    Secondary
  </span>
</span>
`;

exports[`test should render a default component with nothing 1`] = `
<span
  className="badge small default" />
`;
